2004-01-16 Atsushi Enomoto <atsushi@ximian.com>

	* XslOutput.cs : Reverted. default encoding should be utf-8.

2004-01-14  Jackson Harper <jackson@ximian.com>

	* GenericOutputter.cs: Add constructors that do not take an
	encoding to fix build.
	
2004-01-14 Atsushi Enomoto <atsushi@ximian.com>

	* XmlWriterEmitter.cs : It now uses WriteProcessingInstruction() to
	  write XML declaration. It means that output supports non document
	  entity. This fixes bug #52729.
	* Emitter.cs, TextEmitter.cs, HtmlEmitter.cs, XmlWriterEmitter.cs :
	  modified WriteStartDocument() signature to receive Encoding.
	* GenericOutputter.cs : 
	  - Added .ctor() which receives Encoding. (It is used for TextWriter 
	    output to get actual encoding.)
	  - Added .ctor() to take an boolean argument which indicates it is
	    variable content or not. (When variable, it does not call 
	    WriteStartDocument().)
	* XslKey.cs,
	  XsltCompiledContext.cs : comment out WriteLine().
	* XslOutput.cs : set default encoding utf-16.

2004-01-08  Nick Drochak <ndrochak@ieee.org>

	* XsltCompiledContext.cs: Remove unused variable and unreachable code.

2003-12-26 Atsushi Enomoto <atsushi@ximian.com>

	* XslDecimalFormat.cs : implemented format-number() other than number
	  grouping.
	* XsltCompiledContext.cs : Modified XsltFormatNumber.Evaluate() to
	  catch ArgumentException which will be thrown by formatting process.

2003-12-23 Atsushi Enomoto <atsushi@ximian.com>

	* ScriptCompilerInfo.cs : Use "mjs" as JScript compiler.

2003-12-20 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XsltCompiledContext.cs: Remove workaround now that monodoc
	is fixed.

2003-12-20 Atsushi Enomoto <atsushi@ximian.com>

	* XslStylesheet.cs : considering xsl:imports, we can't handle namespace
	  aliases at compilation time, so evaluate at the first run-time.

2003-12-18 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* GenericOutputter.cs : support for runtime-determined output type.