@@ -1,3 +1,10 @@
+2004-02-08 Atsushi Enomoto <atsushi@ximian.com>
+
+	* GenericOutputter.cs,
+	  XslAttributeSet.cs,
+	  XslStylesheet.cs,
+	  XslTemplate.cs : tiny foreach elimination.
+
 2004-01-16 Atsushi Enomoto <atsushi@ximian.com>
 
 	* XslOutput.cs : Reverted. default encoding should be utf-8.
